# ncnn_llm-rag-demo

./: .gitignore  .gitmodules  CMakeLists.txt  HOWTOUSE.md  README.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml
build-findpkg/: CMakeCache.txt
scripts/: copy_runtime_deps.cmake  embed_web_assets.py  fetch_ncnn_20260113.ps1  fetch_ncnn_20260113.sh
src/: app_main.cpp  rag_index.cpp  rag_index.h  rag_ingest.cpp  rag_ingest.h  rag_text.cpp  rag_text.h  rag_vector_db.cpp  rag_vector_db.h
src/web/: app.js  index.html  styles.css
